@@ -5,6 +5,10 @@ Griffith ChangeLog
 (c) 2005-2010  Vasco Nunes, Piotr Ożarowski
 
 
+2010-05-10  Michael Jahn
+	* updated movie plugin IMDB-de
+	* poster md5 wasn't saved if poster is already in database
+
 2010-05-06  Michael Jahn
 	* [#324171] PDF Font Size
 	* support for covers, year, runtime, notes and plot for PDF export
